# audit

./: Audio.cpp  Audio.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  Editor.ui  Main.cpp  Properties.cpp  Properties.hpp  Properties.ui  QTLICENSE  README.md  Sample.cpp  Sample.hpp  Selection.cpp  Selection.hpp  TODO.txt  Time.cpp  Time.hpp  Track.cpp  Track.hpp  Utils.cpp  Utils.hpp  Wave.cpp  Wave.hpp  resources.qrc
icons/: icon.rc
